--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIRO - AI Research Oxford | Student-Run AI Research Community</title>
+    <title>AIRO - AI Research Oxford</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
@@ -98,8 +98,8 @@
             "@type": "Event",
             "name": "Weekly Hack Sessions",
             "description": "Weekly AI/ML hack sessions for Oxford students",
-            "startDate": "2024-01-01",
-            "endDate": "2024-12-31",
+            "startDate": "2025-01-01",
+            "endDate": "2025-12-31",
             "dayOfWeek": "Saturday",
             "startTime": "13:00",
             "endTime": "19:00",
