--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <main role="main">
             <em class="tagline">We all say we're doing research during term time, but we never are.</em>
             <div class="join-us">
-                <a href="https://discord.gg/u9KzfEHWXC" class="join-button">Join our Discord Server</a>
+                <a href="https://lu.ma/0l5gv640" class="join-button">JOIN HACK DAY 1</a>
             </div>
 
             <section class="about">
                 <h2>WHO WE ARE</h2>
                 <p class="lead">We're a student run CS/AI/ML lab, a small technical community exploring the frontier of models. We run weekly hack sessions every Saturday 1-7pm at CS deparment labs, all programmers are welcome! The sessions are chill and come and go as you please (though we do hope you'll stay for all of it). Ping us on discord when you arrive and we'll come get you.</p>
-                <p>If you're interested in speaking at one of our events, email us.</p>
+                <p>If you're interested in speaking at one of our events, <a href="mailto:contact@airo.org.uk"></a>email us.</a></p>
             </section>
 
             <section class="who-we-want">
@@ -70,7 +70,7 @@
             <div class="social-links">
                 <a href="mailto:contact@airo.org.uk">Email</a>
                 <span class="separator">•</span>
-                <a href="#twitter">Twitter</a>
+                <a href="https://x.com/joinAIRO">Twitter</a>
             </div>
             <p class="copyright">© 2025 AI Research Oxford. All rights reserved.</p>
         </footer>
