--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <section class="about">
                 <h2>WHO WE ARE</h2>
-                <p class="lead">We're a student run CS/AI/ML lab, a small technical community exploring the frontier of models. We run weekly hack sessions every Saturday 1-7pm at CS deparment labs, all programmers are welcome! The sessions are chill and come and go as you please (though we do hope you'll stay for all of it). Ping us on discord when you arrive and we'll come get you.</p>
+                <p class="lead">We're a student run CS/AI/ML lab, a small technical community exploring the frontier of models. We run weekly hack sessions every Saturday 1-7pm at CS deparment labs, all programmers are welcome! The sessions are chill and come and go as you please (though we do hope you'll stay for all of it). Sign up on Luma for our next hack day!</p>
                 <p>If you're interested in speaking at one of our events, <a href="mailto:contact@airo.org.uk"></a>email us.</a></p>
             </section>
 
