link to website

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
 
             <section class="supporters">
-                <p class="team">The society is run by <a href="https://ericyrhuang.com"> Eric</a> and friends.</p>
+                <!-- <p class="team">The society is run by <a href="https://ericyrhuang.com"> Eric</a> and friends.</p> -->
+                <p class="team">The society is run by Eric and friends.</p>
             </section>
 
 
