--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
         <main role="main">
             <em class="tagline">We all say we're doing research during term time, but we never are.</em>
             <div class="join-us">
-                <a href="https://lu.ma/0l5gv640" class="join-button">JOIN HACK DAY 1</a>
+                <!-- <a href="https://lu.ma/0l5gv640" class="join-button">JOIN HACK DAY 1</a> -->
+                <a
+                href="https://lu.ma/event/evt-Aucp7JToTmWFi1V"
+                class="luma-checkout--button"
+                data-luma-action="checkout"
+                data-luma-event-id="evt-Aucp7JToTmWFi1V"
+              >
+                Join our first hack day!
+              </a>
+              
+              <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
             </div>
 
             <section class="about">
