--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- <a href="https://lu.ma/0l5gv640" class="join-button">JOIN HACK DAY 1</a> -->
                 <a
                 href="https://lu.ma/event/evt-Aucp7JToTmWFi1V"
-                class="luma-checkout--button"
+                class="register-button"
                 data-luma-action="checkout"
                 data-luma-event-id="evt-Aucp7JToTmWFi1V"
               >
