--- a/index.html
+++ b/index.html
@@ -42,18 +42,29 @@
         
         <main role="main">
             <em class="tagline">We all say we're doing research during term time, but we never are.</em>
-            <div class="join-us">
-                <!-- <a href="https://lu.ma/0l5gv640" class="join-button">JOIN HACK DAY 1</a> -->
+            <!-- <div class="join-us">
                 <a
-                href="https://lu.ma/event/evt-Aucp7JToTmWFi1V"
+                href="https://lu.ma/event/evt-53cNtDxJBb1WpYb
                 class="register-button"
                 data-luma-action="checkout"
-                data-luma-event-id="evt-Aucp7JToTmWFi1V"
+                data-luma-event-id="evt-53cNtDxJBb1WpYb"
               >
-                Join our first hack day!
+                Join our next hack day!
               </a>
               
               <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
+            </div> -->
+
+            <br><br>
+            <p>Our next hack day is the ETH Oxford Hackathon. Sign up below (affiliate link helps support us). You will be refunded upon registration. More info <a href="https://ethoxford.io">here</a>.</p>
+
+            <div class="join-us">
+                <a
+                href="https://buytickets.at/ethoxford/1478725/r/515"
+                class="register-button"
+              >
+                Next hack day: ETH Oxford Hackathon
+              </a>
             </div>
 
             <section class="about">
