--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <em class="tagline">We all say we're doing research during term time, but we never are.</em>
             <div class="join-us">
                 <a
-                    href="https://lu.ma/event/evt-53cNtDxJBb1WpYb"
+                    href="https://lu.ma/event/evt-BTlcX8JrzIdJ5sg"
                     class="register-button"
                     data-luma-action="checkout"
-                    data-luma-event-id="evt-53cNtDxJBb1WpYb"
+                    data-luma-event-id="evt-BTlcX8JrzIdJ5sg"
                 >
                     Join our next hack day!
                 </a>
