--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <em class="tagline">We all say we're doing research during term time, but we never are.</em>
             <div class="join-us">
                 <a
-                    href="https://lu.ma/event/evt-BTlcX8JrzIdJ5sg"
+                    href="https://lu.ma/event/evt-6Kd9Eg3cfiweKBI"
                     class="register-button"
                     data-luma-action="checkout"
-                    data-luma-event-id="evt-BTlcX8JrzIdJ5sg"
+                    data-luma-event-id="evt-6Kd9Eg3cfiweKBI"
                 >
                     Join our next hack day!
                 </a>
